force-app/main/default/objects/Contract_Payment_request__c.object
<CustomObject>
    <fields>
        <fullName>X3_Amount_Allocated__c</fullName>
        <inlineHelpText>The sum of 1) Amount Allocated, 2) Amount Allocated, and 3) Amount Allocated must equal the “Invoice Payment Amount” that is entered above.</inlineHelpText>
        <label>3)  Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Budget_Center_Name_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Do Not Delete, important for old contracts, but not used anymore in current contracts. 4/18/2016</description>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the related budget center number and sub. Use the &quot;Search&quot; or &quot;Filters&quot; to locate the budget center and select the name of the budget center under the &quot;Center Record ID&quot; column.</inlineHelpText>
        <label>XOld: 3.) Budget Center Name &amp; Number</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The cost center you have searched for is no longer active or you have submitted an invalid entry. Please consult with your Finance or Operations department for questions.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipLabel>Contract Payment Requests (3.) Budget Center Name &amp; Number)</relationshipLabel>
        <relationshipName>Contract_Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3_Financial_Account_Picklist__c</fullName>
        <description>Sometimes there are multiple account types in one payment. An example is for our lease payments that sometimes including electricity or other office improvements (e.g. 540500 lease v. 5411 office remodeling, utilities).</description>
        <inlineHelpText>Select the third Financial Account number to which this payment or income should be applied (if applicable). Ex: Sometimes our lease payments include electricity or other office improvements (e.g. 540500 lease v. 5411 office remodeling, utilities).</inlineHelpText>
        <label>3) Financial Account Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Account_Number</valueSetName>
        </valueSet>
    </fields>
    <label>Contract Payment Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Payment_Allocation_Summary</fullName>
        <columns>NAME</columns>
        <columns>Project_ID_1__c</columns>
        <columns>X1_Amount_Allocated__c</columns>
        <columns>RO_Total_Allocated_1__c</columns>
        <columns>Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Allocation Summary</label>
    </listViews>
    <nameField>
        <displayFormat>Payment-{MM}{DD}{YYYY}-{0000}</displayFormat>
        <label>Payment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Payment Requests</pluralLabel>
    <recordTypes>
        <fullName>BirdReturns_Contract_Payment_Request</fullName>
        <active>true</active>
        <label>BirdReturns Contract Payment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CFR_RD_Contract_Payment_Request</fullName>
        <active>true</active>
        <description>Record type created for CF&amp;R application.</description>
        <label>CFR_RD Contract Payment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CFR_RD_Grant_Out_Contract_Payment_Request</fullName>
        <active>true</active>
        <description>Record type created for CF&amp;R application.</description>
        <label>CFR_RD Grant Out Contract Payment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant_Out_Contract_Payment_Request</fullName>
        <active>true</active>
        <description>Payment request for all grants-out</description>
        <label>Grant-Out Contract Payment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Contract_Payment_Request</fullName>
        <active>true</active>
        <description>Payment request for master contracts (real estate and non-real estate)</description>
        <label>Master Contract Payment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Contract_Payment_Request</fullName>
        <active>true</active>
        <description>Payment request for sub contracts (real estate and non-real estate)</description>
        <label>Sub Contract Payment Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Activity_Number_Must_Be_Six_Digits</fullName>
        <active>true</active>
        <errorConditionFormula>X1_Activity_Associated_with_Payment__c =true
 &amp;&amp;  
LEN(Activity_1__c) &lt;&gt; 6</errorConditionFormula>
        <errorDisplayField>Activity_1__c</errorDisplayField>
        <errorMessage>The Activity number must be a six digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Activity_Number_Must_Be_Six_Digits_2</fullName>
        <active>true</active>
        <errorConditionFormula>X2_Activity_Associated_with_Payment__c  =true
 &amp;&amp;  
LEN(Activity_2__c) &lt;&gt; 6</errorConditionFormula>
        <errorDisplayField>Activity_2__c</errorDisplayField>
        <errorMessage>The Activity number must be a six digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Activity_Number_Must_Be_Six_Digits_3</fullName>
        <active>true</active>
        <errorConditionFormula>X3_Activity_Associated_with_Payment__c  =true
 &amp;&amp;  
LEN(Activity_3__c) &lt;&gt; 6</errorConditionFormula>
        <errorDisplayField>Activity_3__c</errorDisplayField>
        <errorMessage>The Activity number must be a six digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_6_Digit_Activity_Number_1</fullName>
        <active>true</active>
        <description>If there is an Activity associated with the payment, a six digit number must be entered in the Activity field.</description>
        <errorConditionFormula>RecordTypeId = &quot;012a00000018Hom&quot; 
&amp;&amp;
X1_Activity_Associated_with_Payment__c =true
&amp;&amp; 
ISBLANK ( Activity_1__c )</errorConditionFormula>
        <errorDisplayField>Activity_1__c</errorDisplayField>
        <errorMessage>Please enter the six digit Activity number associated with the payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_6_Digit_Activity_Number_2</fullName>
        <active>true</active>
        <errorConditionFormula>RecordTypeId = &quot;012a00000018Hom&quot; 
&amp;&amp;
X2_Activity_Associated_with_Payment__c =true
&amp;&amp;
ISBLANK ( Activity_2__c )</errorConditionFormula>
        <errorDisplayField>Activity_2__c</errorDisplayField>
        <errorMessage>Please enter the six digit Activity number associated with the payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_6_Digit_Activity_Number_3</fullName>
        <active>true</active>
        <errorConditionFormula>RecordTypeId = &quot;012a00000018Hom&quot; 
&amp;&amp;
X3_Activity_Associated_with_Payment__c =true
&amp;&amp;
ISBLANK ( Activity_3__c )</errorConditionFormula>
        <errorDisplayField>Activity_3__c</errorDisplayField>
        <errorMessage>Please enter the six digit Activity number associated with the payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finance_Review_Approval_Required</fullName>
        <active>true</active>
        <description>If &quot;Source of Grant Out&quot; equals &quot;Federal&quot; then Finance is required to review and approve the contract payment request.</description>
        <errorConditionFormula>AND(ISPICKVAL(Contract_Number__r.Source_of_Grant_Out__c  , &quot;Federal&quot;), 
ISBLANK( Finance_Grants__c ), 
(ISPICKVAL(Payment_Request_Status__c , &quot;Draft&quot;)))</errorConditionFormula>
        <errorMessage>If &quot;Source of Grant Out&quot; on the related equals &quot;Federal&quot;,  Finance is required to review and approve the contract payment request. Please enter in the name of the Finance Partner in the &quot;Required Payment Request Approvers&quot; section.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Payment_Amount_Equals_Total</fullName>
        <active>true</active>
        <description>Invoice payment amount equals total allocated amount.</description>
        <errorConditionFormula>(RecordTypeId = &quot;012a00000018GoI&quot; 
&amp;&amp; 
 Invoice_Payment_Amount__c  &lt;&gt;  Invoice_Total_Amount_Allocated__c)
 || 
(RecordTypeId = &quot;012300000017kjc&quot;
&amp;&amp; 
 Invoice_Payment_Amount__c  &lt;&gt;  Invoice_Total_Amount_Allocated__c)
 || 
(RecordTypeId = &quot;012300000017W6s&quot; 
&amp;&amp; 
 Invoice_Payment_Amount__c  &lt;&gt;  Invoice_Total_Amount_Allocated__c)
 || 
(RecordTypeId = &quot;012a00000018EYs&quot;
&amp;&amp; 
 Invoice_Payment_Amount__c  &lt;&gt;  Invoice_Total_Amount_Allocated__c)</errorConditionFormula>
        <errorDisplayField>Invoice_Payment_Amount__c</errorDisplayField>
        <errorMessage>The total Invoice Payment Amount must equal the sum of the following fields in the Project ID &amp; Award Description section: 1) Amount Allocated, 2) Amount Allocated, 3) Amount Allocated.  Please check the those fields and the Invoice Payment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lobbying_Project_ID1_requires_activity</fullName>
        <active>true</active>
        <description>If project ID 1 is a lobbying project code, the user must enter a lobbying activity code as specified by Kevin McBride on 8/11/17.</description>
        <errorConditionFormula>AND (Project_ID_1__r.Lobbying_Project_ID__c ,
 OR ( ISBLANK( Activity_1__c ) ,     NOT(CONTAINS(&quot;100100,100101,100107,100108,100111,100115,100121,100122,100128,100129&quot;, Activity_1__c ))))</errorConditionFormula>
        <errorDisplayField>Activity_1__c</errorDisplayField>
        <errorMessage>You have entered a lobbying project id which requires a valid lobbying activity code.  If sure have entered an activity that you are sure is correct please check with your Finance Advisor and/or your Salesforce Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lobbying_Project_ID2_requires_activity</fullName>
        <active>true</active>
        <description>If project ID 2 is a lobbying project code, the user must enter a lobbying activity code as specified by Kevin McBride on 8/11/17.</description>
        <errorConditionFormula>AND (Project_ID_2__r.Lobbying_Project_ID__c ,
 OR ( ISBLANK( Activity_2__c ) ,     NOT(CONTAINS(&quot;100100,100101,100107,100108,100111,100115,100121,100122,100128,100129&quot;, Activity_2__c ))))</errorConditionFormula>
        <errorDisplayField>Activity_2__c</errorDisplayField>
        <errorMessage>You have entered a lobbying project id which requires a valid lobbying activity code.  If sure have entered an activity that you are sure is correct please check with your Finance Advisor and/or your Salesforce Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lobbying_Project_ID3_requires_activity</fullName>
        <active>true</active>
        <description>If project ID 3 is a lobbying project code, the user must enter a lobbying activity code as specified by Kevin McBride on 8/11/17.</description>
        <errorConditionFormula>AND (Project_ID_3__r.Lobbying_Project_ID__c ,
 OR ( ISBLANK( Activity_3__c ) ,     NOT(CONTAINS(&quot;100100,100101,100107,100108,100111,100115,100121,100122,100128,100129&quot;, Activity_3__c ))))</errorConditionFormula>
        <errorDisplayField>Activity_3__c</errorDisplayField>
        <errorMessage>You have entered a lobbying project id which requires a valid lobbying activity code.  If sure have entered an activity that you are sure is correct please check with your Finance Advisor and/or your Salesforce Administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Creator_Not_Equal_to_Approver</fullName>
        <active>true</active>
        <errorConditionFormula>Payment_Request_Router__c  =  Operations__c</errorConditionFormula>
        <errorDisplayField>Operations__c</errorDisplayField>
        <errorMessage>The &quot;Operations&quot; reviewer/approver must not be the same as the &quot;Payment Request Router&quot;.  Please route the payment request to the appropriate Operations staff person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Invoice_Payment</fullName>
        <active>true</active>
        <description>The total invoice payments cannot exceed the total amount of the contract.</description>
        <errorConditionFormula>AND( OR(Contract_Number__r.RecordType.DeveloperName = &quot;NonRealEstateAgreement&quot;,Contract_Number__r.RecordType.DeveloperName =&quot;Non_Real_Estate_Sub_Agreement&quot;), ISNEW() ,
(Invoice_Payment_Amount__c &gt; Contract_Number__r.Contract_Balance__c ))</errorConditionFormula>
        <errorDisplayField>Invoice_Payment_Amount__c</errorDisplayField>
        <errorMessage>The total amount of invoice payments cannot exceed the total amount of the contract. Please check to see if payment has already been made.</errorMessage>
    </validationRules>
</CustomObject>